--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -11,7 +11,8 @@
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
     <!-- Example Code -->
-    
+     
+    {% load widget_tweaks %}
     {% if messages %}
     <br>
         {% for message in messages %}
@@ -24,21 +25,21 @@
       {% csrf_token %}
       <div class="mb-3">
         <label for={{form.username.auto_id}} class="form-label" {% if form.username.error%} has-error {% endif %}>Usuário</label>
-            {% render_field form.username class="form-control" placeholder="digite seu usuário" id="form.username.auto_id" type="text"%}
+            {% render_field form.username class="form-control" placeholder="digite seu usuário" id=form.username.auto_id type="text"%}
         <div id="emailHelp" class="form-text"></div>
       </div>
       <div class="mb-3"></div>
         <label for={{form.email.auto_id}} class="form-label" {% if form.email.error%} has-error {% endif %}>Email</label>
-        {% render_field form.email class="form-control" placeholder="digite seu email" id="form.email.auto_id" type="email"%}
+        {% render_field form.email class="form-control" placeholder="digite seu email" id=form.email.auto_id type="email"%}
         <div id="emailHelp" class="form-text"></div>
       </div>
       <div class="mb-3">
         <label for={{form.senha1.auto_id}}class="form-label">Senha</label>
-        {% render_field form.senha1 class="form-control" placeholder="digite a senha" id="form.senha1.auto_id" type="password"%}
+        {% render_field form.senha1 class="form-control" placeholder="digite a senha" id=form.senha1.auto_id type="password"%}
       </div>
       <div class="mb-3">
-        <label for={{form.senha2.auto_id}}class="form-label">Confirme a Senha</label>
-        {% render_field form.senha2 class="form-control" placeholder="confirme a senha" id="form.senha2.auto_id" type="password"%}
+        <label for={{form.senha2.auto_id}}class="form-label" >Confirme a Senha</label>
+        {% render_field form.senha2 class="form-control" placeholder="confirme a senha" id=form.senha2.auto_id type="password"%}
       </div>
       <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
