--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -5,45 +5,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Bootstrap Example</title>
+    <title>Criar Usuário</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
 
-    <!-- Example Code -->
-     
     {% load widget_tweaks %}
-    {% if messages %}
-    <br>
-        {% for message in messages %}
-            <div class="alert {{message.tags}}">
-                {{message}}
-            </div>
-        {% endfor %}
-    {% endif %}
-    <form action="{% url 'cadastro-usuario' %}" method="POST"> 
+    <form action="{% url 'create-user' %}" method="POST"> 
       {% csrf_token %}
-      <div class="mb-3"></div>
-        <label for={{form.email.auto_id}} class="form-label" {% if form.email.error%} has-error {% endif %}>Email</label>
-        {% render_field form.email class="form-control" placeholder="digite seu email" id=form.email.auto_id type="email"%}
-        <div id="emailHelp" class="form-text"></div>
+      <div class="mb-3">
+        <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
+        {% render_field form.email class="form-control" placeholder="digite seu email" %}
+        {% if form.email.errors %}
+          <div class="text-danger">
+            {% for error in form.email.errors %}
+              <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <div class="mb-3">
-        <label for={{form.password_1.auto_id}}class="form-label">Senha</label>
-        {% render_field form.password_1 class="form-control" placeholder="digite a senha" id=form.password_1.auto_id type="password"%}
+        <label for="{{ form.password_1.id_for_label }}" class="form-label">Senha</label>
+        {% render_field form.password_1 class="form-control" placeholder="digite a senha" %}
+        {% if form.password_1.errors %}
+          <div class="text-danger">
+            {% for error in form.password_1.errors %}
+              <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <div class="mb-3">
-        <label for={{form.password_2.auto_id}}class="form-label" >Confirme a Senha</label>
-        {% render_field form.password_2 class="form-control" placeholder="confirme a senha" id=form.password_2.auto_id type="password"%}
+        <label for="{{ form.password_2.id_for_label }}" class="form-label">Confirme a Senha</label>
+        {% render_field form.password_2 class="form-control" placeholder="confirme a senha" %}
+        {% if form.password_2.errors %}
+          <div class="text-danger">
+            {% for error in form.password_2.errors %}
+              <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
-      <div class="mb-3"></div>
-        <label for={{form.name.auto_id}} class="form-label" {% if form.name.error%} has-error {% endif %}>Name</label>
-        {% render_field form.name class="form-control" placeholder="digite seu nome completo" id=form.name.auto_id type="form-text"%}
+      <div class="mb-3">
+        <label for="{{ form.name.id_for_label }}" class="form-label">Nome</label>
+        {% render_field form.name class="form-control" placeholder="digite seu nome completo" %}
+        {% if form.name.errors %}
+          <div class="text-danger">
+            {% for error in form.name.errors %}
+              <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
+      <div class="mb-3">
+        <label for="{{ form.birthday.id_for_label }}" class="form-label">Data de Nascimento</label>
+        {% render_field form.birthday class="form-control" placeholder="digite sua data de nascimento" %}
+        {% if form.birthday.errors %}
+          <div class="text-danger">
+            {% for error in form.birthday.errors %}
+              <p>{{ error }}</p>
+            {% endfor %}
+          </div>
+        {% endif %}
       </div>
       <button type="submit" class="btn btn-primary">Cadastrar</button>
     </form>
-    
-      
+
     <!-- End Example Code -->
   </body>
 </html>
