--- a/templates/categorias.html
+++ b/templates/categorias.html
@@ -12,6 +12,7 @@
     <!-- Importanto CSS -->
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/style_menu-sidebar.css">
+    <link rel="stylesheet" href="/css/categorias.css">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -66,11 +67,31 @@
 <!-- BARRAS DE MENU E SIDEBAR -->
 
 
+<!-- CONTEÚDO DE CATEGORIAS -->
+
+    
+<div class="content-categorias">
+    <ul>
+        <li><a href="/pages_categorias/html/fantasia.html">Fantasia</a></li>
+        <li><a href="/pages_categorias/html/poema.html">Poema</a></li>
+        <li><a href="/pages_categorias/html/comédia.html">Comédia</a></li>
+        <li><a href="/pages_categorias/html/terror.html">Terror</a></li>
+        <li><a href="/pages_categorias/html/romance.html">Romance</a></li>
+        <li><a href="/pages_categorias/html/ação.html">Ação</a></li>
+        <li><a href="/pages_categorias/html/suspense.html">Suspense</a></li>
+    </ul>
+</div>
+
+<!-- CONTEÚDO DE CATEGORIAS -->
 
 
 
 
 
 
-    <script src="js/home.js" ></script>
+
+
+
+    <script src="/js/home.js" ></script>
 </body>
+</html>
