--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -1,76 +1,115 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <title>Criar Usuário</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  </head>
-  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+{% load static %}
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Importando Fontes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+
+    <!-- Importanto CSS -->
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_menu-sidebar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/cadastro-usuario.css' %}">
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Projeto biblioteca</title>
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
+
+
+</head>
+<body>
+
+    <!-- BARRAS DE MENU E SIDEBAR -->
+
+    <header class="header container_lateral">
+        <div class="logomarca"><img src="{% static 'img/Logomarca.png'%}" alt="Logo marca Biblioteca virtual Liceu">
+        </div>
+    </header>
+
+<!-- BARRAS DE MENU E SIDEBAR -->
+
+
+
+
+
+<!-- CONTEÚDO DE CADASTRO USUARIO -->
     {% load widget_tweaks %}
-    <form action="{% url 'create-user' %}" method="POST"> 
-      {% csrf_token %}
-      <div class="mb-3">
-        <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
-        {% render_field form.email class="form-control" placeholder="digite seu email" %}
-        {% if form.email.errors %}
-          <div class="text-danger">
-            {% for error in form.email.errors %}
-              <p>{{ error }}</p>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </div>
-      <div class="mb-3">
-        <label for="{{ form.password_1.id_for_label }}" class="form-label">Senha</label>
-        {% render_field form.password_1 class="form-control" placeholder="digite a senha" %}
-        {% if form.password_1.errors %}
-          <div class="text-danger">
-            {% for error in form.password_1.errors %}
-              <p>{{ error }}</p>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </div>
-      <div class="mb-3">
-        <label for="{{ form.password_2.id_for_label }}" class="form-label">Confirme a Senha</label>
-        {% render_field form.password_2 class="form-control" placeholder="confirme a senha" %}
-        {% if form.password_2.errors %}
-          <div class="text-danger">
-            {% for error in form.password_2.errors %}
-              <p>{{ error }}</p>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </div>
-      <div class="mb-3">
-        <label for="{{ form.name.id_for_label }}" class="form-label">Nome</label>
-        {% render_field form.name class="form-control" placeholder="digite seu nome completo" %}
-        {% if form.name.errors %}
-          <div class="text-danger">
-            {% for error in form.name.errors %}
-              <p>{{ error }}</p>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </div>
-      <div class="mb-3">
-        <label for="{{ form.birthday.id_for_label }}" class="form-label">Data de Nascimento</label>
-        {% render_field form.birthday class="form-control" placeholder="digite sua data de nascimento" %}
-        {% if form.birthday.errors %}
-          <div class="text-danger">
-            {% for error in form.birthday.errors %}
-              <p>{{ error }}</p>
-            {% endfor %}
-          </div>
-        {% endif %}
-      </div>
-      <button type="submit" class="btn btn-primary">Cadastrar</button>
-    </form>
+    <form action="{% url 'create-user' %}" method="POST" class="formulario-cadastro"> 
+        {% csrf_token %}
+        <div class="content-formulario">
+            <label for="{{ form.name.id_for_label }}" class="form-label">Nome</label>
+            {% render_field form.name class="form-control" placeholder="digite seu nome completo" %}
+            {% if form.name.errors %}
+            <div class="text-danger">
+                {% for error in form.name.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
 
-    <!-- End Example Code -->
-  </body>
-</html>
+        <div class="content-formulario">
+            <label for="{{ form.email.id_for_label }}" class="form-label">Email</label>
+            {% render_field form.email class="form-control" placeholder="digite seu email" %}
+            {% if form.email.errors %}
+            <div class="text-danger">
+                {% for error in form.email.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="content-formulario">
+            <label for="{{ form.password_1.id_for_label }}" class="form-label">Senha</label>
+            {% render_field form.password_1 class="form-control" placeholder="digite a senha" %}
+            {% if form.password_1.errors %}
+            <div class="text-danger">
+                {% for error in form.password_1.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
+        </div><div class="content-formulario">
+            <label for="{{ form.password_2.id_for_label }}" class="form-label">Confirme a Senha</label>
+            {% render_field form.password_2 class="form-control" placeholder="confirme a senha" %}
+            {% if form.password_2.errors %}
+            <div class="text-danger">
+                {% for error in form.password_2.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
+
+        <div class="content-formulario">
+            <label for="{{ form.birthday.id_for_label }}" class="form-label">Data de Nascimento</label>
+            {% render_field form.birthday class="form-control" placeholder="digite sua data de nascimento" %}
+            {% if form.birthday.errors %}
+            <div class="text-danger">
+                {% for error in form.birthday.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+        </div>
+
+
+        <button type="submit" class=" login-caixa">Criar</button>
+    </form>
+    <div class="box-voltar"></div>
+    <a class="voltar" href="#">
+        Voltar
+    </a>
+
+
+<!-- CONTEÚDO DE CADASTRO USUARIO -->
+
+
+</body>
