--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -10,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     
     <!-- Importanto CSS -->
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style_login.css">
+    <link rel="stylesheet" href="{% static 'css/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style_login.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon">
     <title>Projeto biblioteca</title>
 
 
@@ -21,28 +22,42 @@
 <body>
     <div class="login_container">
         <img   
-            src="./img/Logomarca.png"
+            src="{% static 'img/Logomarca.png' %}"
             class="logo"
             alt="IMAGEM DA LOGO"
         >
-        <img class="perfil" src="../img/perfil.png" alt="Imagem de perfil">
-
-        
-        <form action="#" method="get" class="formulario-login">
+        {% load widget_tweaks %}
+        <form action={% url 'login' %} method="POST" class="formulario-login">
+            {% csrf_token %}
             <div class="content-formulario">
-                <label for="email" class="label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="example@email.com" required autofocus>
+                <label for={{ form.email.id_for_email}} class="label">Email</label>
+                {% render_field form.email class="form-control" placeholder="example@email.com" %}
+                {% if form.email.errors %}
+                <div class="text-danger">
+                    {% for error in form.email.errors %}
+                    <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+                {% endif %}
             </div>
 
             <div class="content-formulario">
                 <label for="senha" class="label">Senha</label>
-                <input type="password" class="form-control" id="password" name="senha" placeholder="123456" required autocomplete="off">
+                <label for="{{ form.password.id_for_label }}" class="form-label">Senha</label>
+            {% render_field form.password class="form-control" placeholder="digite a senha" %}
+            {% if form.password.errors %}
+            <div class="text-danger">
+                {% for error in form.password.errors %}
+                <p>{{ error }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
             </div>
 
             <button type="submit" class="  login-caixa">LOGIN</button>
         
             <a href="#" class="btn-link-login" aria-label="Entrar como visitante">Entrar como visitante</a>
-            <a href="#" class="btn-link-login" aria-label="Criar conta">Criar Conta</a>
+            <a href="{% url 'create-user'%}" class="btn-link-login" aria-label="Criar conta">Criar Conta</a>
         </form>
 
         
