init create login form.

--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -104,7 +104,7 @@
         <button type="submit" class=" login-caixa">Criar</button>
     </form>
     <div class="box-voltar"></div>
-    <a class="voltar" href="#">
+    <a class="voltar" href="{% url 'login' %}">
         Voltar
     </a>
 
