--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,8 @@
         <form action={% url 'login' %} method="POST" class="formulario-login">
             {% csrf_token %}
             <div class="content-formulario">
-                <label for={{ form.email.id_for_email}} class="label">Email</label>
+                <label for="email" class="label"></label>
+                <label for="{{ form.email.id_for_label}}" class="label">Email</label>
                 {% render_field form.email class="form-control" placeholder="example@email.com" %}
                 {% if form.email.errors %}
                 <div class="text-danger">
@@ -40,26 +41,31 @@
                 </div>
                 {% endif %}
             </div>
-
             <div class="content-formulario">
-                <label for="senha" class="label">Senha</label>
-                <label for="{{ form.password.id_for_label }}" class="form-label">Senha</label>
-            {% render_field form.password class="form-control" placeholder="digite a senha" %}
-            {% if form.password.errors %}
-            <div class="text-danger">
-                {% for error in form.password.errors %}
-                <p>{{ error }}</p>
-                {% endfor %}
-            </div>
-            {% endif %}
+                <label for="senha" class="label"></label>
+                <label for="{{ form.password.id_for_label }}" class="label">Senha</label>
+                {% render_field form.password class="form-control" placeholder="digite a senha" %}
+                {% if form.password.errors %}
+                <div class="text-danger">
+                    {% for error in form.password.errors %}
+                    <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+                {% endif %}
             </div>
 
-            <button type="submit" class="  login-caixa">LOGIN</button>
+            <button type="submit" class="login-caixa">LOGIN</button>
         
             <a href="#" class="btn-link-login" aria-label="Entrar como visitante">Entrar como visitante</a>
             <a href="{% url 'create-user'%}" class="btn-link-login" aria-label="Criar conta">Criar Conta</a>
         </form>
-
+        {% if messages %}
+            <ul>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
         
     </div>
 </body>
