--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -10,13 +11,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 
     <!-- Importanto CSS -->
-    <link rel="stylesheet" href="/css/normalize.css">
-    <link rel="stylesheet" href="/css/style_menu-sidebar.css">
+    <link rel="stylesheet" href="{% static "css/normalize.css" %}">
+    <link rel="stylesheet" href="{% static "css/style_menu-sidebar.css" %}">
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Projeto biblioteca</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static "img/favicon.ico" %}" type="image/x-icon">
 
 
 </head>
@@ -25,7 +26,14 @@
     <!-- BARRAS DE MENU E SIDEBAR -->
 
     <header class="header container_lateral">
-        <div class="logomarca"><img src="/img/Logomarca.png" alt="Logo marca Biblioteca virtual Liceu">
+        <div class="logomarca">
+            <img   
+            src=" {% static 'img/Logomarca.png' %} " 
+            class="logo"
+            alt="IMAGEM DA LOGO"
+        >
+        
+
         </div>
 
         <nav class="header_nav">
@@ -44,7 +52,7 @@
                 </li>
                 <li>
                     <a href="#" target="_blank" rel="noopener noreferrer">
-                    <img src="/img/perfil.png" alt="Imagem de perfil" class="img-perfil">
+                    <img src="{% static 'img/perfil.png' %}" alt="Imagem de perfil" class="img-perfil">
                     <h3 class="texto_perfil">Perfil</h3>
                     </a>
                 </li>
