--- a/templates/login.html
+++ b/templates/login.html
@@ -53,8 +53,8 @@
                 </div>
                 {% endif %}
             </div>
-
-            <button type="submit" class="login-caixa">LOGIN</button>
+            
+            <a href=" {% url "home" %}" class="login-caixa" >LOGIN</a>
         
             <a href="#" class="btn-link-login" aria-label="Entrar como visitante">Entrar como visitante</a>
             <a href="{% url 'create-user'%}" class="btn-link-login" aria-label="Criar conta">Criar Conta</a>
