--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Projeto biblioteca</title>
     <link rel="shortcut icon" href="{% static "img/favicon.ico" %} " type="image/x-icon">
-    <link rel="stylesheet" href="{% static "Pages_main/css/perfil.css" %} ">
+    <link rel="stylesheet" href="{% static "css/perfil.css" %} ">
 
 </head>
 <body>
@@ -48,26 +48,25 @@
     </div>
     {% load widget_tweaks %}
     
-    <form action="{% url "perfil" %}" method="GET" class="formulario-cadastro">
-        {% csrf_token %}
+    <div class="formulario-cadastro">
 
         <div class="content-formulario">
 
-            <label for="{{ form.name.id_for_label }}" class="label">Nome</label>
-            {% render_field form.name class="form-control" placeholder="digite seu nome completo" %}
+            <label class="label">Nome</label>
+            {{ user.profile_user_user.name}}
             
         </div>
 
         <div class="content-formulario">
-            <label for="nascimento" class="label">Data de nascimento</label>
-           
+            <label class="label">Data de nascimento</label>
+            {{ user.profile_user_user.birthday}}
         </div>
 
         <div class="content-formulario">
-            <label for="email" class="label">Email</label>
-            
+            <label class="label">Email</label>
+            {{ user.email}}
         </div>
-    </form>
+    </div>
 
     <a class="voltar" href=" {% url "home" %}">
         Voltar
