finish create models books and category.

--- a/templates/login.html
+++ b/templates/login.html
@@ -54,7 +54,7 @@
                 {% endif %}
             </div>
             
-            <a href=" {% url "home" %}" class="login-caixa" >LOGIN</a>
+            <button type="submit" class="login-caixa">LOGIN</button>
         
             <a href="#" class="btn-link-login" aria-label="Entrar como visitante">Entrar como visitante</a>
             <a href="{% url 'create-user'%}" class="btn-link-login" aria-label="Criar conta">Criar Conta</a>
